# robot-session

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.test  README.md  SESSION_ARCHITECTURE_SUMMARY.md  config.yaml  docker-compose.livekit-only.yml  docker-compose.test.yml  docker-compose.yml  run_local_test.sh  run_tests.sh  会话管理器实现计划.md  架构文档.md
log/: LIVEKIT_CONNECTION_ANALYSIS.md
microservice-sdk/: .dockerignore  Cargo.toml
microservice-sdk/examples/: simple_microservice.rs
microservice-sdk/src/: client.rs  errors.rs  lib.rs  models.rs  traits.rs
session-manager/: .dockerignore  API文档.md  Cargo.toml  Dockerfile  README.md
session-manager/config/: development.toml  docker.test.toml  docker.toml  local.toml
session-manager/src/: config.rs  events.rs  lib.rs  main.rs  server.rs
session-manager/src/api/: handlers.rs  mod.rs  models.rs  sse.rs
session-manager/src/domain/: microservice.rs  mod.rs  session.rs
session-manager/src/services/: livekit_service.rs  microservice_registry.rs  mod.rs  session_service.rs
session-manager/src/storage/: memory.rs  mod.rs
session-manager/src/utils/: errors.rs
session-manager/tests/: livekit_integration_test.rs  pong_service.rs
vector-log-hub/: .dockerignore  .gitrepo  Dockerfile.dev  README.md  docker-compose.yml
vector-log-hub/.github/workflows/: deploy-vector-log-hub.yml
vector-log-hub/config/: grafana.ini  logrotate.conf  prometheus.yml  vector.yaml
vector-log-hub/config/grafana/dashboards/: vector-log-hub.json
vector-log-hub/config/grafana/provisioning/datasources/: datasources.yml
vector-log-hub/doc/: log-hub.md
vector-log-hub/python/: README.md  pyproject.toml  test_vector_logging.py
vector-log-hub/python/vector_logging/: __init__.py  handler.py
vector-log-hub/rust/: .dockerignore  Cargo.toml
vector-log-hub/rust/src/: init.rs  layer.rs  lib.rs  tests.rs  visitor.rs
vector-log-hub/rust/tests/: basic_usage.rs  instrumented_service.rs
