[package]
name = "microservice-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for microservices to integrate with the session manager"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json"] }
url = { workspace = true }
livekit = { workspace = true }
livekit-api = { workspace = true }

tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
