[package]
name = "session-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { workspace = true, features = ["full"] }

# Web 框架
axum = { workspace = true, features = ["json", "tokio"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
# SSE 支持
futures = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

# LiveKit SDK
livekit-api = { workspace = true, features = ["access-token", "services-tokio"] }
livekit = { workspace = true }

# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# HTTP 客户端
reqwest = { workspace = true, features = ["json"] }

# 配置管理
config = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID 生成
uuid = { workspace = true, features = ["v4", "serde"] }

# 时间处理
chrono = { workspace = true, features = ["serde"] }

# 异步 trait
async-trait = { workspace = true }

# 并发集合
dashmap = { workspace = true }

# Vector 日志
tracing-vector = { workspace = true }

[dev-dependencies]
# 测试框架
tokio-test = { workspace = true }
# HTTP 客户端用于测试
reqwest = { workspace = true, features = ["json", "stream"] }
# SSE 客户端
reqwest-eventsource = { workspace = true }
# 测试断言
assert_matches = { workspace = true }
# Microservice SDK for testing
microservice-sdk = { path = "../microservice-sdk" }
